# koushit

./: .gitignore
backend/: pyproject.toml
backend/alembic/versions/: 752ea141fa0e_change_thing.py  bcdf66a287e6_add_comment.py  c4886d1733da_add_user.py  de5852fb4f4c_add_video.py
backend/src/: app.py  test_flow.py
backend/src/attempts/: models.py
backend/src/auth/: dependencies.py  models.py  router.py  schemas.py  utils.py
backend/src/common/: constants.py
backend/src/lm/: feedback_lm.py  lm_model.py  prompts.py
backend/src/transcribe/: transcribe.py
backend/src/utils/: models.py
backend/src/videos/: models.py  router.py  schemas.py
frontend/: eslint.config.js  index.html  openapi-ts.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/app/: app.tsx
frontend/src/app/hooks/: useTimer.tsx
frontend/src/app/providers/: root-provider.tsx  user-store-provider.tsx  user-store.tsx
frontend/src/app/routing/: app-router.tsx  authenticated-app.tsx  unauthenticated-app.tsx
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/client/client/: index.ts  types.ts  utils.ts
frontend/src/components/fields/: file-field.tsx  textarea-field.tsx
frontend/src/components/layout/: default-fallback-layout.tsx  layout.tsx  sidebar-layout.tsx  sidebar.tsx  unauthenticated-layout.tsx
frontend/src/components/miscellaneous/: icons.tsx  loading-spinner.tsx
frontend/src/components/navigation/: link.tsx  section-nav.tsx
frontend/src/styles/: globals.css
(+22 files in other folders)
