[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic-postgresql-enum>=1.5.0",
    "bcrypt>=4.2.1",
    "fastapi[standard]>=0.115.6",
    "jwt>=1.3.1",
    "langchain-core>=0.3.30",
    "langchain-openai>=0.3.0",
    "langchain>=0.3.14",
    "openai-whisper>=20240930",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.37",
]
